# salesbud

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  add_test_lead.py  changelog.md  fix_prints.py  force_connect.py  icp.toon  progress.md  pyproject.toml  pyrightconfig.json  reset_dm.py  task.md
.agents/skills/salesbud-cli/: SKILL.md
.claude/skills/agent-sdk/: SKILL.md
.claude/skills/agent-sdk/evals/: evals.json
.claude/skills/resend/: SKILL.md
.claude/skills/resend/email-threading/: SKILL.md
.claude/skills/resend/email-threading-workspace/iteration-1/: benchmark.json  review.html
.github/workflows/: ci.yml  deploy-website.yml
.opencode/plans/: cleanup-plan.md  lead-generation-workflow-plan.md  production-testing-plan.md  remediation-implementation-plan.md
data/: profile.html  profile_click.html
data/browser_state/: Local State
data/browser_state/Default/: Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
data/browser_state/Default/DawnGraphiteCache/: data_1  index
data/browser_state/Default/DawnWebGPUCache/: data_1  index
data/browser_state/Default/Extension Rules/: LOG
data/browser_state/Default/Extension Scripts/: LOG
data/browser_state/Default/Extension State/: LOG  LOG.old
data/browser_state/Default/GCM Store/: LOG  LOG.old
data/browser_state/Default/GPUCache/: data_0  data_1  data_2  index
data/browser_state/Default/Session Storage/: 000003.ldb  LOG  LOG.old  MANIFEST-000001
data/browser_state/Default/Sessions/: Session_13417814249783769  Session_13417814529033616  Tabs_13417814250498849  Tabs_13417814505241102
data/browser_state/Default/Site Characteristics Database/: LOG  LOG.old
data/browser_state/Default/WebStorage/: QuotaManager
data/browser_state/Default/shared_proto_db/: LOG  LOG.old
data/browser_state/GrShaderCache/: data_1  index
data/browser_state/GraphiteDawnCache/: data_0  data_1  data_2  index
data/browser_state/ShaderCache/: data_1  index
data/browser_state/segmentation_platform/: ukm_db
docs/: README.md  progress.md  skillsfordev.md  toon_migration_plan.md
docs/current/: PRD.md  SPEC.md  STRUCTURE.md
docs/future/: BRD.md  FUTURE-PRD.md
scripts/: prod_check.py
src/salesbud/: __init__.py  __main__.py  database.py  exceptions.py  main.py
src/salesbud/cli/: __init__.py  dashboard.py  main.py
src/salesbud/config/: __init__.py  env.py
src/salesbud/database/: __init__.py  connection.py
src/salesbud/models/: __init__.py  lead.py  validation.py
src/salesbud/services/: __init__.py  connector.py  email_finder.py  emailer.py  enricher.py  inbox.py  personalizer.py  researcher.py  scraper.py  sequence.py
src/salesbud/utils/: __init__.py  browser.py  icp_loader.py  logger.py  paths.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_database.py  test_services.py  test_validation.py
website/: README.md  package-lock.json  package.json
website/src/: App.tsx  Docs.tsx  index.css  main.tsx
(+1487 files in other folders)
