[project]
name = "salesbud"
version = "1.3.0"
description = "Autonomous Outbound SDR Agent - LinkedIn DM Sequencer"
authors = [
    {name = "Synto Labs"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.51.0",           # latest stable
    "python-dotenv>=1.1.0",         # latest stable
    "resend>=2.10.0",               # latest stable
    "pydantic>=2.11.0",             # input validation
    # v2.0 additions (email discovery + enrichment)
    "crawl4ai>=0.5.0",              # company enrichment
    "dnspython>=2.7.0",             # MX lookups for SMTP email verification
    "requests>=2.32.3",             # HTTP requests for email_finder scraping
    "beautifulsoup4>=4.13.0",       # HTML parsing for email_finder
    "rich>=13.9.0",                 # CLI TUI and terminal formatting
    "toon-format>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=25.1.0",
    "ruff>=0.9.0",
]

[project.scripts]
salesbud = "salesbud.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/salesbud"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
